feat: implement dry-run mode for converters and update time formatting utilities
- Add dry-run support to converters via ConverterSettings interface and BasicConverterSettings implementation
- Update NexoConverter and related file operations to respect dry-run mode, preventing file writes and directory modifications when enabled
- Add -dryrun flag to convert command with user feedback message
- Refactor TimerBuilder to support millisecond precision and improve auto time formatting
- Move Message and MessageType enums to common.format package and update usages
- Enhance VCommand to support flag parsing and tab completion for flags
- Update ROADMAP to mark dry-run mode as complete